# actixweb-diesel

./: .env  Cargo.toml  README.md  diesel.toml
src/: main.rs  models.rs  schema.rs
src/actors/: db.rs
