[package]
name = "diesel-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.8.0"
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "uuid"] }
diesel_migrations = "2.2.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
